# Blog

./: .gitignore  README.md  fixture.py  forms.py  main.py  pyproject.toml  test_case.py
templates/: index.html  make-post.html  post.html
