[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.0.3"
flask-ckeditor = "^0.4.6"
flask-gravatar = "^0.5.0"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"
email-validator = "^1.3.1"
selenium = "^4.8.3"
pytest = "^7.2.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
